--- a/src/pages/RouteResult.css
+++ b/src/pages/RouteResult.css
@@ -1,46 +1,57 @@
 /* RouteResult.css */
+
+.route-result-container {
+    width: 100%;
+    height: 100%;
+    /* height: calc(100vh - (8vh + 20px)); */
+    /* Центрируем контейнер */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #f9f0e9;
+
+    /* Полное отключение прокрутки */
+    overflow: hidden;
+    left: 0;
+
+    margin: 0;
+    padding: 0;
+}
+
 .route-result {
-    max-width: 1000px;
-    margin: 2rem auto;
+    width: 80%;
+    height: 80%;
+    /* max-width: 1200px;
+    max-height: 800px; */
     background-color: white;
-    border-radius: 12px;
-    padding: 2rem;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    background: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
-}
-
-body {
-    background-color: #f4e6dc; /* Цвет фона как на скрине */
-    margin: 0;
-    font-family: sans-serif;
-}
-
-/* Заголовок маршрута */
-.route-result h2 {
-    font-size: 1.5rem;
-    font-weight: 600;
-    margin-bottom: 0.5rem;
-}
-
-/* Стили для карты */
-.route-result .map-container {
-    width: 100%;
-    height: 400px;
-    border-radius: 12px;
     overflow: hidden;
+    /* position: fixed; */
+
 }
 
-/* Переиспользуемый текстовый блок */
-.route-description {
-    font-size: 1rem;
-    color: #333;
-    line-height: 1.4;
+.route-result h2 {
+    padding:  16px;
+    margin: 0;
+    background-color: #f8f8f8;
+    border-bottom: 1px solid #e0e0e0;
 }
 
+.route-result h4 {
+    padding: 0px 20px;
+    margin: 0;
+    /* background-color: #f8f8f8; */
+    /* border-bottom: 1px solid #e0e0e0; */
+}
 
+/* .leaflet-container {
+    flex: 1;
+    width: 100%;
+    height: calc(100% - 37px);
+} */
 
 /* RouteResult.css
 .route-result {
@@ -48,67 +59,4 @@ body {
     height: 100vh;
     background-color: #f9f0e9;
 }
-
-.form-container {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 2rem;
-    background-color: white;
-}
-
-input {
-    margin-bottom: 1rem;
-    padding: 0.5rem;
-    font-size: 1rem;
-    border: 1px solid #ccc;
-}
-
-button {
-    padding: 0.75rem;
-    background-color: orange;
-    color: white;
-    font-weight: bold;
-    border: none;
-    cursor: pointer;
-}
-
-.suggestions-list {
-    background: white;
-    border: 1px solid #ccc;
-    list-style: none;
-    padding: 0;
-    margin-top: 0;
-    max-height: 150px;
-    overflow-y: auto;
-}
-
-.suggestions-list li {
-    padding: 8px;
-    cursor: pointer;
-}
-
-.suggestions-list li:hover {
-    background-color: #eee;
-}
-
-.input-with-remove {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-}
-
-.remove-button {
-    background: none;
-    border: none;
-    color: #888;
-    font-size: 18px;
-    cursor: pointer;
-}
-
-.remove-button:hover {
-    color: red;
-}
-
  */
