RouteBuilder style changed

--- a/src/pages/RouteBuilder.css
+++ b/src/pages/RouteBuilder.css
@@ -1,8 +1,35 @@
 /* RouteBuilder.css */
-.route-builder {
+
+/* <div className="route-builder-contatiner"> */
+
+.route-builder-contatiner {
+    width: 100%;
+    height: 100%;
+    /* height: calc(100vh - (8vh + 20px)); */
+    /* Центрируем контейнер */
     display: flex;
-    height: 100vh;
-    background-color: #faeee7;
+    justify-content: center;
+    align-items: center;
+    background: #f9f0e9;
+
+    /* Полное отключение прокрутки */
+    overflow: hidden;
+    left: 0;
+
+    margin: 0;
+    padding: 0;
+}
+
+.route-builder {
+    width: 90%;
+    height: 80%;
+    background-color: white;
+    border-radius: 12px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+    /* position: fixed; */
 }
 
 .form-container {
@@ -10,6 +37,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: right;
     padding: 2rem;
     background-color: white;
 }
@@ -22,12 +50,16 @@ input {
 }
 
 button {
-    padding: 0.75rem;
+    /* padding: 0.75rem; */
+    padding: 0.5rem 1rem; /* Уменьшаем вертикальный и горизонтальный padding */
     background-color: orange;
     color: white;
     font-weight: bold;
     border: none;
     cursor: pointer;
+    font-size: 0.9rem; /* Уменьшаем размер шрифта */
+    border-radius: 4px; /* Добавляем скругление для эстетики */
+    margin-top: 0.5rem; /* Отступ сверху для разделения кнопок */
 }
 
 .suggestions-list {
@@ -66,5 +98,3 @@ button {
 .remove-button:hover {
     color: red;
 }
-
-
